<resources>
    <string name="app_name">AppRate</string>
    <string name="rate_textView">Rate</string>
    <string name="your_name">Your Name</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="your_phone">Your Phone</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_types">Restaurant Types</string>
    <string name="service_rate">Service Rate</string>
    <string name="food_rate">Food Rate</string>
    <string name="cleans_rate">Cleans Rate</string>
    <string name="day_visited">Day Visited</string>
    <string name="notes">Notes</string>
    <string name="rate">Rate</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="enter_restaurant_name">Enter Restaurant Name</string>
    <string name="enter_restaurant_address">Enter Restaurant Address</string>
    <string name="enter_notes">Enter Your Note</string>
    <string name="date_visited">Enter Day visited</string>
    <string name="time_visited">Enter Time visited</string>
    <string name="price">Enter verage price per person</string>a



    <string name="your_name_err">Your name is not valid </string>
    <string name="res_name_err">Restaurant name is not valid </string>
    <string name="phone_err">Your phone is not valid  </string>
    <string name="res_address_err">Restaurant address not empty and follow: 20 Park Street</string>
    <string name="date_err">Date visited not empty and follow: mm/dd/yyyy , example: 12/30/2020 </string>
    <string name="time_err">Time visited not empty </string>
    <string name="average_price">Average price: $</string>
    <string name="price_err">Price invalid</string>
    <string name="Logo">Logo</string>


</resources>